[project]
name = "comfyui-qwenmultiangle"
description = "A ComfyUI node for 3D camera angle control, outputs angle prompts for multi-angle image generation"
version = "0.3.1"
license = { text = "MIT" }
readme = "README.md"

[project.urls]
Repository = "https://github.com/jtydhr88/ComfyUI-qwenmultiangle"

[tool.comfy]
PublisherId = "jtydhr88"
DisplayName = "Qwen Multiangle Camera"
Icon = ""
